Refactor HTML structure and enhance navigation links in index and products pages; implement product fetching and rendering functionality in global.js; add search and category filtering features in index.js and products.js; integrate local storage for wishlist and cart management; improve user experience with toast notifications.

--- a/html/checkout.html
+++ b/html/checkout.html
@@ -16,11 +16,18 @@
         <nav class="container">
             <div class="main-logo">Mini Mart</div>
             <ul class="navigation-item-container">
-                <li class="navigation-item">Home</li>
-                <li class="navigation-item">Categories</li>
-                <li class="navigation-item">Products</li>
-                <li class="navigation-item">About Us</li>
+                <li class="navigation-item"><a href="index.html">Home</a></li>
+                <li class="navigation-item">
+                    <a href="products.html">Categories</a>
+                </li>
+                <li class="navigation-item">
+                    <a href="products.html">Products</a>
+                </li>
+                <li class="navigation-item">
+                    <a href="#">About Us</a>
+                </li>
             </ul>
+
             <div class="main-icon-container">
                 <svg
                     class="main-icon"
