--- a/html/index.html
+++ b/html/index.html
@@ -18,11 +18,18 @@
         <nav class="container">
             <div class="main-logo">Mini Mart</div>
             <ul class="navigation-item-container">
-                <li class="navigation-item">Home</li>
-                <li class="navigation-item">Categories</li>
-                <li class="navigation-item">Products</li>
-                <li class="navigation-item">About Us</li>
+                <li class="navigation-item"><a href="index.html">Home</a></li>
+                <li class="navigation-item">
+                    <a href="products.html">Categories</a>
+                </li>
+                <li class="navigation-item">
+                    <a href="products.html">Products</a>
+                </li>
+                <li class="navigation-item">
+                    <a href="#">About Us</a>
+                </li>
             </ul>
+
             <div class="main-icon-container">
                 <svg
                     class="main-icon"
@@ -93,181 +100,91 @@
             </p>
         </div>
         <div class="category-tile-section container">
-            <div class="category-tile portrait-tile">
+            <a href="./products.html" class="category-tile portrait-tile">
                 <img
                     src="../assests/index-page/portrait-1.jpg"
                     alt="portrait1"
                     class="category-img"
                 />
                 <h4 class="category-name">Royal</h4>
-            </div>
+            </a>
+
             <div class="landscape">
-                <div class="category-tile landscape-tile">
+                <a href="./products.html" class="category-tile landscape-tile">
                     <img
                         src="../assests/index-page/landscape-2.jpg"
                         alt="landscape2"
                         class="category-img"
                     />
                     <h4 class="category-name">Arabic</h4>
-                </div>
-                <div class="category-tile landscape-tile">
+                </a>
+                <a href="./products.html" class="category-tile landscape-tile">
                     <img
                         src="../assests/index-page/landscape-1.jpg"
                         alt="landscape1"
                         class="category-img"
                     />
                     <h4 class="category-name">Modern</h4>
-                </div>
+                </a>
             </div>
-            <div class="category-tile portrait-tile">
+
+            <a href="./products.html" class="category-tile portrait-tile">
                 <img
                     src="../assests/index-page/portrait-2.jpg"
                     alt="portrait2"
                     class="category-img"
                 />
                 <h4 class="category-name">Classic</h4>
-            </div>
+            </a>
         </div>
+
         <hr />
         <div class="product-container container">
-            <h2 class="product-header">Featured Products</h2>
-            <div class="product-card-container">
-                <div class="product-card">
-                    <div class="product-img-container">
-                        <img
-                            src="https://wvxxlssoccbctxspmtyy.supabase.co/storage/v1/object/public/products/public/24fada32-83ae-4598-9815-06fc6b891277.jpeg"
-                            alt=""
-                            class="product-img"
-                        />
-                    </div>
-                    <h4 class="product-name">Elegant Oak Table Lamp</h4>
-                    <div class="price-and-favorite-icon-container">
-                        <div class="price">
-                            <span class="product-pre-offer-price">75$</span>
-                            <span class="product-after-offer-price"
-                                >71.25$</span
-                            >
-                        </div>
-                        <svg
-                            class="fav-icon"
-                            xmlns="http://www.w3.org/2000/svg"
-                            viewBox="0 0 640 640"
-                        >
-                            <path
-                                d="M305 151.1L320 171.8L335 151.1C360 116.5 400.2 96 442.9 96C516.4 96 576 155.6 576 229.1L576 231.7C576 343.9 436.1 474.2 363.1 529.9C350.7 539.3 335.5 544 320 544C304.5 544 289.2 539.4 276.9 529.9C203.9 474.2 64 343.9 64 231.7L64 229.1C64 155.6 123.6 96 197.1 96C239.8 96 280 116.5 305 151.1z"
-                            />
-                        </svg>
-                    </div>
-                </div>
+            <div class="featured-products-header">
+                <h2 class="product-header">Featured Products</h2>
+                <a href="./products.html" class="see-more-btn">See More</a>
+            </div>
 
-                <div class="product-card">
-                    <div class="product-img-container">
-                        <img
-                            src="https://wvxxlssoccbctxspmtyy.supabase.co/storage/v1/object/public/products/public/24fada32-83ae-4598-9815-06fc6b891277.jpeg"
-                            alt=""
-                            class="product-img"
-                        />
-                    </div>
-                    <h4 class="product-name">Elegant Oak Table Lamp</h4>
-                    <div class="price-and-favorite-icon-container">
-                        <div class="price">
-                            <span class="product-pre-offer-price">75$</span>
-                            <span class="product-after-offer-price"
-                                >71.25$</span
-                            >
-                        </div>
-                        <svg
-                            class="fav-icon"
-                            xmlns="http://www.w3.org/2000/svg"
-                            viewBox="0 0 640 640"
-                        >
-                            <path
-                                d="M305 151.1L320 171.8L335 151.1C360 116.5 400.2 96 442.9 96C516.4 96 576 155.6 576 229.1L576 231.7C576 343.9 436.1 474.2 363.1 529.9C350.7 539.3 335.5 544 320 544C304.5 544 289.2 539.4 276.9 529.9C203.9 474.2 64 343.9 64 231.7L64 229.1C64 155.6 123.6 96 197.1 96C239.8 96 280 116.5 305 151.1z"
+            <div class="product-card-container">
+                               <!-- <div class="product-card">
+                        <div class="product-img-container">
+                            <img
+                                src="https://wvxxlssoccbctxspmtyy.supabase.co/storage/v1/object/public/products/public/24fada32-83ae-4598-9815-06fc6b891277.jpeg"
+                                alt=""
+                                class="product-img"
                             />
-                        </svg>
-                    </div>
-                </div>
-                <div class="product-card">
-                    <div class="product-img-container">
-                        <img
-                            src="https://wvxxlssoccbctxspmtyy.supabase.co/storage/v1/object/public/products/public/24fada32-83ae-4598-9815-06fc6b891277.jpeg"
-                            alt=""
-                            class="product-img"
-                        />
-                    </div>
-                    <h4 class="product-name">Elegant Oak Table Lamp</h4>
-                    <div class="price-and-favorite-icon-container">
-                        <div class="price">
-                            <span class="product-pre-offer-price">75$</span>
-                            <span class="product-after-offer-price"
-                                >71.25$</span
-                            >
                         </div>
-                        <svg
-                            class="fav-icon"
-                            xmlns="http://www.w3.org/2000/svg"
-                            viewBox="0 0 640 640"
-                        >
-                            <path
-                                d="M305 151.1L320 171.8L335 151.1C360 116.5 400.2 96 442.9 96C516.4 96 576 155.6 576 229.1L576 231.7C576 343.9 436.1 474.2 363.1 529.9C350.7 539.3 335.5 544 320 544C304.5 544 289.2 539.4 276.9 529.9C203.9 474.2 64 343.9 64 231.7L64 229.1C64 155.6 123.6 96 197.1 96C239.8 96 280 116.5 305 151.1z"
-                            />
-                        </svg>
-                    </div>
-                </div>
-                <div class="product-card">
-                    <div class="product-img-container">
-                        <img
-                            src="https://wvxxlssoccbctxspmtyy.supabase.co/storage/v1/object/public/products/public/24fada32-83ae-4598-9815-06fc6b891277.jpeg"
-                            alt=""
-                            class="product-img"
-                        />
-                    </div>
-                    <h4 class="product-name">Elegant Oak Table Lamp</h4>
-                    <div class="price-and-favorite-icon-container">
-                        <div class="price">
-                            <span class="product-pre-offer-price">75$</span>
-                            <span class="product-after-offer-price"
-                                >71.25$</span
-                            >
+                        <h4 class="product-name">${p.name}</h4>
+
+                        <div class="price-and-actions-container">
+                            <div class="product-price">
+                                <span class="product-pre-offer-price">${p.price}$</span>
+                                <span class="product-after-offer-price"
+                                    >${p.discount_price}$</span
+                                >
+                            </div>
+                            <div class="product-actions">
+                                <svg
+                                    class="fav-icon"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    viewBox="0 0 640 640"
+                                >
+                                    <path
+                                        d="M305 151.1L320 171.8L335 151.1C360 116.5 400.2 96 442.9 96C516.4 96 576 155.6 576 229.1L576 231.7C576 343.9 436.1 474.2 363.1 529.9C350.7 539.3 335.5 544 320 544C304.5 544 289.2 539.4 276.9 529.9C203.9 474.2 64 343.9 64 231.7L64 229.1C64 155.6 123.6 96 197.1 96C239.8 96 280 116.5 305 151.1z"
+                                    />
+                                </svg>
+                                <svg
+                                    class="cart-plus-icon"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    viewBox="0 0 640 640"
+                                >
+                                    <path
+                                        d="M0 72C0 58.7 10.7 48 24 48L69.3 48C96.4 48 119.6 67.4 124.4 94L124.8 96L537.5 96C557.5 96 572.6 114.2 568.9 133.9L537.8 299.8C532.1 330.1 505.7 352 474.9 352L171.3 352L176.4 380.3C178.5 391.7 188.4 400 200 400L456 400C469.3 400 480 410.7 480 424C480 437.3 469.3 448 456 448L200.1 448C165.3 448 135.5 423.1 129.3 388.9L77.2 102.6C76.5 98.8 73.2 96 69.3 96L24 96C10.7 96 0 85.3 0 72zM160 528C160 501.5 181.5 480 208 480C234.5 480 256 501.5 256 528C256 554.5 234.5 576 208 576C181.5 576 160 554.5 160 528zM384 528C384 501.5 405.5 480 432 480C458.5 480 480 501.5 480 528C480 554.5 458.5 576 432 576C405.5 576 384 554.5 384 528zM336 142.4C322.7 142.4 312 153.1 312 166.4L312 200L278.4 200C265.1 200 254.4 210.7 254.4 224C254.4 237.3 265.1 248 278.4 248L312 248L312 281.6C312 294.9 322.7 305.6 336 305.6C349.3 305.6 360 294.9 360 281.6L360 248L393.6 248C406.9 248 417.6 237.3 417.6 224C417.6 210.7 406.9 200 393.6 200L360 200L360 166.4C360 153.1 349.3 142.4 336 142.4z"
+                                    />
+                                </svg>
+                            </div>
                         </div>
-                        <svg
-                            class="fav-icon"
-                            xmlns="http://www.w3.org/2000/svg"
-                            viewBox="0 0 640 640"
-                        >
-                            <path
-                                d="M305 151.1L320 171.8L335 151.1C360 116.5 400.2 96 442.9 96C516.4 96 576 155.6 576 229.1L576 231.7C576 343.9 436.1 474.2 363.1 529.9C350.7 539.3 335.5 544 320 544C304.5 544 289.2 539.4 276.9 529.9C203.9 474.2 64 343.9 64 231.7L64 229.1C64 155.6 123.6 96 197.1 96C239.8 96 280 116.5 305 151.1z"
-                            />
-                        </svg>
-                    </div>
-                </div>
-                <div class="product-card">
-                    <div class="product-img-container">
-                        <img
-                            src="https://wvxxlssoccbctxspmtyy.supabase.co/storage/v1/object/public/products/public/24fada32-83ae-4598-9815-06fc6b891277.jpeg"
-                            alt=""
-                            class="product-img"
-                        />
-                    </div>
-                    <h4 class="product-name">Elegant Oak Table Lamp</h4>
-                    <div class="price-and-favorite-icon-container">
-                        <div class="price">
-                            <span class="product-pre-offer-price">75$</span>
-                            <span class="product-after-offer-price"
-                                >71.25$</span
-                            >
-                        </div>
-                        <svg
-                            class="fav-icon"
-                            xmlns="http://www.w3.org/2000/svg"
-                            viewBox="0 0 640 640"
-                        >
-                            <path
-                                d="M305 151.1L320 171.8L335 151.1C360 116.5 400.2 96 442.9 96C516.4 96 576 155.6 576 229.1L576 231.7C576 343.9 436.1 474.2 363.1 529.9C350.7 539.3 335.5 544 320 544C304.5 544 289.2 539.4 276.9 529.9C203.9 474.2 64 343.9 64 231.7L64 229.1C64 155.6 123.6 96 197.1 96C239.8 96 280 116.5 305 151.1z"
-                            />
-                        </svg>
-                    </div>
-                </div>
+                    </div> -->
             </div>
         </div>
         <hr />
@@ -450,5 +367,7 @@
             <hr />
             <p>Copyright © 2023 Renew Bariatrics, Inc</p>
         </footer>
+
+        <script type="module" src="../js/index.js"></script>
     </body>
 </html>
